--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-Flask==3.0.0
-torch==2.0.1
-gunicorn==21.2.0
+fastapi
+uvicorn[standard]
+torch==2.0.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+numpy
